fix(sonar): replace wildcard ResponseEntity<?> with ResponseEntity<Object>, use Stream.toList() in GeofenceController